# test-task

./: .gitignore  README.md  pyproject.toml
src/: data_read.py  main.py  presenters.py  report_generation.py  settings.py
tests/: conftest.py  test_app.py
