[project]
name = "workmate-test-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[build-system]
requires = ["uv>=0.1.0", "setuptools>=75.2.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 89
target-version = "py312"

exclude = [
    "**/__pycache__/",
    "**/.egg-info/",
    "tests/"
]

[tool.ruff.lint]

select = ["ALL"]

ignore = [
    "ARG", "ANN", "D", "EM101", "EM102", "PT001", "PT023",
    "SIM108", "SIM114", "TRY003", "PLW2901", "RET505",
    "PLR0913", "UP038", "TC001", "SLF001", "COM812",
    "ISC001", "S101", "RUF002", "B008", "E721", "INP001",
    "ERA001", "RUF001", "RUF003", "PTH123", "PTH120", "PTH118",
    "PTH100", "T201"
]

[tool.ruff.lint.isort]
no-lines-before = ["local-folder"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = "ignore::DeprecationWarning"
